--- a/index.html
+++ b/index.html
@@ -288,7 +288,8 @@
 
 
     <!-- INVIO -->
-    <button type="submit">Invia</button>
+    <button type="submit" class="btn-invia">Invia</button>
+
 
 </form>
 
