--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 </head>
 
 <body>
+  
+<div id="status"></div>
 
 <h1>Checklist Videoterminale</h1>
 
@@ -48,12 +50,12 @@
 
 <fieldset>
     <legend>Ufficio</legend>
-    <input type="text" id="ufficio" name="ufficio" placeholder="Inserire Ufficio" required>
+    <input type="text" id="ufficio" name="ufficio" placeholder="Inserire Ufficio">
 </fieldset>
 
 <fieldset>
     <legend>Mansione</legend>
-    <input type="text" id="mansione" name="mansione" placeholder="Inserire Mansione" required>
+    <input type="text" id="mansione" name="mansione" placeholder="Inserire Mansione">
 </fieldset>
 
 <fieldset>
@@ -293,6 +295,7 @@
 
 </form>
 
+<script src="app.js"></script>
 </body>
 
 
