--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   
 <div id="status"></div>
 
-<h1>Checklist Videoterminale</h1>
+<h1>Checklist Videoterminale VDT</h1>
 
 <form id="checklist-form">
   
