--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 
-  <h1>Checklist Videoterminale VDT</h1>
+  <h1>Checklist Videoterminale</h1>
 
   <form id="checklist-form">
 
@@ -61,7 +61,7 @@
       <fieldset>
         <legend>Numero Postazione</legend>
         <input type="number" id="numero_postazione" name="numero_postazione" placeholder="Inserire numero postazione"
-          min="1" required>
+          min="1" inputmode="numeric" required>
       </fieldset>
     </div>
 
