--- a/index.html
+++ b/index.html
@@ -310,6 +310,11 @@
       <label><input type="radio" name="attrezzature2" value="⛔ N.A. (Non applicabile)"> ⛔ N.A. (Non applicabile)</label>
     </fieldset>
 
+    <fieldset>
+      <legend>Allega Foto</legend>
+      <input type="file" id="foto" name="foto" accept="image/*" capture="camera">
+    </fieldset>
+
 
     <!-- INVIO -->
     <div class="centrato">
