--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <option value="Rozzano Alberelle">Rozzano Alberelle</option>
           <option value="Rozzano Ecologia">Rozzano Ecologia</option>
           <option value="San Giuliano Milanese Est">San Giuliano Milanese Est</option>
-          <option value="Sesot San Giovanni">Sesot San Giovanni</option>
+          <option value="Sesto San Giovanni">Sesto San Giovanni</option>
           <option value="Settala">Settala</option>
           <option value="Truccazzano">Truccazzano</option>
           <option value="Turbigo">Turbigo</option>
